# MarvelousVM

./: .gitignore  CMakeLists.txt  Makefile  design_doc.md  main.c
include/: instruction.h  memory.h  register.h
src/: instruction.c  main.c  memory.c  memory.h  register.c  register.h
test/: test_vm.c
